--- a/gpuf-c/Cargo.toml
+++ b/gpuf-c/Cargo.toml
@@ -11,6 +11,22 @@ crate-type = ["cdylib", "staticlib", "rlib"]
 name = "gpuf-c"
 path = "src/main.rs"
 
+[[bin]]
+name = "model_download"
+path = "src/bin/model_download.rs"
+
+[[bin]]
+name = "validate_gguf"
+path = "src/bin/validate_gguf.rs"
+
+[[bin]]
+name = "download_and_validate"
+path = "src/bin/download_and_validate.rs"
+
+[[example]]
+name = "test_vulkan_device"
+path = "examples/test_vulkan_device.rs"
+
 [dependencies]
 # Core dependencies
 common = { path = "../common" }
@@ -26,7 +42,6 @@ toml = "0.7"
 dirs = "6.0.0"
 serde_yaml = "0.9.34-deprecated"
 sysinfo = "0.37.0"
-nvml-wrapper = "0.4.0"
 
 # Common dependencies for all platforms
 log = "0.4"
@@ -37,6 +52,9 @@ tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
 url = "2.5.0"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 bytes = { version = "1", default-features = false }
+axum = { version = "0.7", features = ["json"] }
+uuid = { version = "1.6", features = ["v4"] }
+sha2 = "0.10"
 
 # Platform-specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
@@ -45,9 +63,11 @@ once_cell = "1.19"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
+nvml-wrapper = { version = "0.4.0", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 wmi = "0.17.1"
+nvml-wrapper = { version = "0.4.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 acpi = "6.0.1"  
@@ -62,17 +82,25 @@ cocoa = "0.25"
 android_logger = "0.13"
 
 [features]
-default = []
-# CUDA support (NVIDIA GPU)
-cuda = ["llama-cpp-2/cuda"]
-# Metal support (Apple GPU - iOS/macOS)
-metal = ["llama-cpp-2/metal"]
-# Vulkan support (cross-platform GPU)
-vulkan = ["llama-cpp-2/vulkan"]
+default = ["cpu"]
+
 # CPU only
 cpu = ["llama-cpp-2/native"]
+
+# CUDA support (NVIDIA GPU)
+cuda = ["llama-cpp-2/cuda","nvml-wrapper"]
+
+# Metal support (Apple GPU - iOS/macOS)
+metal = ["llama-cpp-2/metal"]
+
 # Android features (disable OpenMP)
-android = []
+android = ["llama-cpp-2/vulkan"]
+
+# Vulkan support (cross-platform GPU)
+vulkan = ["llama-cpp-2/vulkan"]
+
+# NVML feature for GPU monitoring
+nvml = ["nvml-wrapper"]
 
 [dev-dependencies]
 tempfile = "3.3"
