--- a/gpuf-c/Cargo.toml
+++ b/gpuf-c/Cargo.toml
@@ -27,6 +27,18 @@ path = "src/bin/download_and_validate.rs"
 name = "test_vulkan_device"
 path = "examples/test_vulkan_device.rs"
 
+[[example]]
+name = "test_cross_platform_vulkan"
+path = "examples/test_cross_platform_vulkan.rs"
+
+[[example]]
+name = "test_android_device_info"
+path = "examples/test_android_device_info.rs"
+
+[[example]]
+name = "test_client_sdk"
+path = "examples/rust/test_client_sdk.rs"
+
 [dependencies]
 # Core dependencies
 common = { path = "../common" }
@@ -47,6 +59,9 @@ sysinfo = "0.37.0"
 log = "0.4"
 reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
 tokio-rustls = { workspace = true }
+
+# Optional Vulkan dependencies
+ash = { version = "0.37", optional = true }
 rustls-pemfile = { workspace = true }
 tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls", "connect", "stream"] }
 url = "2.5.0"
@@ -60,10 +75,12 @@ sha2 = "0.10"
 [target.'cfg(not(target_os = "android"))'.dependencies]
 llama-cpp-2 = "0.1.125"
 once_cell = "1.19"
+chrono = "0.4.38"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
 nvml-wrapper = { version = "0.4.0", optional = true }
+rocm_smi_lib = { version = "0.1", optional = true }
 
 [target.'cfg(target_os = "windows")'.dependencies]
 wmi = "0.17.1"
@@ -71,8 +88,9 @@ nvml-wrapper = { version = "0.4.0", optional = true }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 acpi = "6.0.1"  
-raw-cpuid = "11.6.0"  
+raw-cpuid = "11.6"  
 regex = "1.7.1"
+plist = "1"
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2"
@@ -80,6 +98,8 @@ cocoa = "0.25"
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.13"
+chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
+once_cell = "1.19"
 
 [features]
 default = ["cpu"]
@@ -93,14 +113,17 @@ cuda = ["llama-cpp-2/cuda","nvml-wrapper"]
 # Metal support (Apple GPU - iOS/macOS)
 metal = ["llama-cpp-2/metal"]
 
-# Android features (disable OpenMP)
+# Android features (Vulkan support)
 android = ["llama-cpp-2/vulkan"]
 
 # Vulkan support (cross-platform GPU)
-vulkan = ["llama-cpp-2/vulkan"]
+vulkan = ["llama-cpp-2/vulkan", "ash"]
 
 # NVML feature for GPU monitoring
 nvml = ["nvml-wrapper"]
+
+# ROCm feature for AMD GPU monitoring
+rocm = ["rocm_smi_lib"]
 
 [dev-dependencies]
 tempfile = "3.3"
@@ -125,8 +148,9 @@ rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]
 opt-level = "z"     # Optimize for size
 lto = true          # Link-time optimization
 codegen-units = 1   # Maximum optimization
-panic = "abort"     # Remove unwinding code
-strip = true        # Strip symbols
+strip = true        # Remove debug symbols
+panic = "abort"     # Reduce panic handling code
+overflow-checks = false # Remove overflow checks
 
 [profile.release.package.gpuf-c]
 # Strip symbols but preserve JNI exports
