Complete project cleanup and configuration updates
- Update .gitignore for build artifacts and temporary files
- Clean up Cargo.toml dependencies and configurations
- Update README.md with current project structure
- Remove obsolete build scripts and compatibility files
- Clean up examples and source code organization
- Update build.rs for proper Android NDK integration
- Standardize project layout after refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,13 @@ zookeeper_logs
 kafka_data
 kafka_logs
 jniLibs*
+*.so
+backup_llama_android_ndk/
+llama-android-ndk/
+llama.cpp/
 *.gguf
+*.rlib
 gpuf-android-sdk
-.\config\
+config/
 ./config/
 /target
-/__pycache__
