--- a/gpuf-c/Cargo.toml
+++ b/gpuf-c/Cargo.toml
@@ -54,29 +54,39 @@ toml = "0.7"
 dirs = "6.0.0"
 serde_yaml = "0.9.34-deprecated"
 sysinfo = "0.37.0"
-
+axum = { version = "0.7", features = ["json"] }
+uuid = "1.18.0"
+futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+sha2 = "0.10"
 # Common dependencies for all platforms
 log = "0.4"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
 reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
 tokio-rustls = { workspace = true }
+llama-cpp-2 = "0.1.125"
+once_cell = "1.19"
+chrono = "0.4.38"
+
+[target.'cfg(target_os = "android")'.dependencies]
+reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream"] }
+android_logger = "0.13"
+chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
+once_cell = "1.19"
+jni = "0.21"
 
 # Optional Vulkan dependencies
 ash = { version = "0.37", optional = true }
 rustls-pemfile = { workspace = true }
 tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls", "connect", "stream"] }
 url = "2.5.0"
-futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
+
 bytes = { version = "1", default-features = false }
-axum = { version = "0.7", features = ["json"] }
+
 uuid = { version = "1.6", features = ["v4"] }
 sha2 = "0.10"
 
 # Platform-specific dependencies
-[target.'cfg(not(target_os = "android"))'.dependencies]
-llama-cpp-2 = "0.1.125"
-once_cell = "1.19"
-chrono = "0.4.38"
-
 [target.'cfg(target_os = "linux")'.dependencies]
 libc = "0.2"
 nvml-wrapper = { version = "0.4.0", optional = true }
@@ -95,11 +105,6 @@ plist = "1"
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2"
 cocoa = "0.25"
-
-[target.'cfg(target_os = "android")'.dependencies]
-android_logger = "0.13"
-chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
-once_cell = "1.19"
 
 [features]
 default = ["cpu"]
@@ -130,28 +135,3 @@ tempfile = "3.3"
 
 [build-dependencies]
 cbindgen = "0.26"
-
-[target.aarch64-linux-android]
-rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]
-
-[target.x86_64-linux-android]
-rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]
-
-[target.armv7-linux-androideabi]
-rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]
-
-[target.i686-linux-android]
-rustflags = ["-Clink-arg=-Wl,--icf=safe", "-Clink-arg=-Wl,--gc-sections"]
-
-[profile.release]
-# Aggressive optimization for minimal size
-opt-level = "z"     # Optimize for size
-lto = true          # Link-time optimization
-codegen-units = 1   # Maximum optimization
-strip = true        # Remove debug symbols
-panic = "abort"     # Reduce panic handling code
-overflow-checks = false # Remove overflow checks
-
-[profile.release.package.gpuf-c]
-# Strip symbols but preserve JNI exports
-strip = "debuginfo"
