- Update .gitignore for Android test app build directories - Fix multimodal header include conflicts - Add build scripts for cross-platform compilation - Update SDK generation and build configuration
Build issues will be addressed in separate commits.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ gpuf-android-sdk
 config/
 ./config/
 /target
+
+# Android test app build artifacts
+android_test_app/.gradle/
+android_test_app/build/
+android_test_app/app/build/
