--- a/gpuf-c/Cargo.toml
+++ b/gpuf-c/Cargo.toml
@@ -43,6 +43,7 @@ path = "examples/rust/test_client_sdk.rs"
 # Core dependencies
 common = { path = "../common" }
 tokio = { workspace = true, default-features = false, features = ["rt", "net", "sync"] }
+tokio-rustls = { workspace = true }
 anyhow = { workspace = true }
 serde = { workspace = true, default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
@@ -56,11 +57,15 @@ serde_yaml = "0.9.34-deprecated"
 sysinfo = "0.37.0"
 axum = { version = "0.7", features = ["json"] }
 uuid = "1.18.0"
+libc = { version = "0.2", optional = true }
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 sha2 = "0.10"
 # Common dependencies for all platforms
 log = "0.4"
-
+bytes = { version = "1", default-features = false }
+rustls-pemfile = { workspace = true }
+tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls", "connect", "stream"] }
+url = "2.5.0"
 [target.'cfg(not(target_os = "android"))'.dependencies]
 reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
 tokio-rustls = { workspace = true }
@@ -69,19 +74,17 @@ once_cell = "1.19"
 chrono = "0.4.38"
 
 [target.'cfg(target_os = "android")'.dependencies]
-reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream"] }
+reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "native-tls-vendored"] }
 android_logger = "0.13"
 chrono = { version = "0.4.38", default-features = false, features = ["clock", "serde"] }
 once_cell = "1.19"
 jni = "0.21"
+tokio-native-tls = "0.3"
+libc = "0.2"
 
 # Optional Vulkan dependencies
 ash = { version = "0.37", optional = true }
-rustls-pemfile = { workspace = true }
-tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls", "connect", "stream"] }
-url = "2.5.0"
-
-bytes = { version = "1", default-features = false }
+vulkan-sys = { version = "0.1.1", optional = true }
 
 uuid = { version = "1.6", features = ["v4"] }
 sha2 = "0.10"
@@ -119,7 +122,7 @@ cuda = ["llama-cpp-2/cuda","nvml-wrapper"]
 metal = ["llama-cpp-2/metal"]
 
 # Android features (Vulkan support)
-android = ["llama-cpp-2/vulkan"]
+android = ["llama-cpp-2/vulkan", "libc"]
 
 # Vulkan support (cross-platform GPU)
 vulkan = ["llama-cpp-2/vulkan", "ash"]
@@ -135,3 +138,7 @@ tempfile = "3.3"
 
 [build-dependencies]
 cbindgen = "0.26"
+
+[[bin]]
+name = "test_inference"
+path = "test_inference.c"
