feat: Implement real LLM inference for Android remote worker
Major changes:
- Refactor JNI APIs: Move local LLaMA JNI functions to jni_llama.rs module
- Implement real inference: Replace gpuf_generate_final_solution_text with manual_llama_completion
- Add proper sampling: Support temperature, top_k, top_p, repeat_penalty parameters
- Fix KV cache: Clear cache before each inference to avoid position conflicts
- Fix sampling logic: Use correct logits index for sampling
- Add inference scheduler: Implement InferenceScheduler and InferenceGateway for task management
- Add remote worker JNI: Create jni_remote_worker.rs with C API wrappers
- Add documentation: Create detailed API docs and architecture diagrams

Android worker improvements:
- Use real llama.cpp inference engine with full sampling support
- Implement proper sampler chain (repeat penalty, top-k, top-p, temperature, distribution)
- Fix output format to return only generated text without debug info
- Add KV cache management for clean inference sessions
- Integrate manual_llama_completion for high-quality text generation

Server improvements:
- Add InferenceScheduler for managing inference tasks across devices
- Add InferenceGateway for HTTP API integration
- Share scheduler instance between gateway and connection handlers
- Fix race condition in task result handling

Documentation:
- Add JNI Remote Worker API documentation (Chinese)
- Add architecture diagrams (Mermaid)
- Add call flow diagrams for remote worker operations

Testing:
- Verified real inference on Android device (Pixel 6)
- Confirmed proper text generation with sampling parameters
- Tested distributed inference through server API

--- a/gpuf-c/Cargo.toml
+++ b/gpuf-c/Cargo.toml
@@ -46,6 +46,7 @@ tokio = { workspace = true, default-features = false, features = ["rt", "net", "
 anyhow = { workspace = true }
 serde = { workspace = true, default-features = false, features = ["derive"] }
 serde_json = { version = "1", default-features = false, features = ["alloc"] }
+bincode = { version = "2.0.1", features = ["serde"] }
 tokio-rustls = { version = "0.26.2",default-features = false, features = ["ring"] }
 clap = { workspace = true }
 tracing = { workspace = true }
